--- a/app/views/ppsps/footer.html.erb
+++ b/app/views/ppsps/footer.html.erb
@@ -1,3 +1,6 @@
-<footer class="mt-3 footer-text">
-  Ce document a été produit avec l'application XXXXXX
+<footer class="footer-container">
+  <div class='mt-3 footer-text'>
+    Ce document a été produit avec l'application Obras
+  </div>
+  <%= wicked_pdf_image_tag('logo-ppsp.png', width: 30, height: 30, class: 'image-footer') %>
 </footer>
