--- a/app/views/ppsps/show.pdf.erb
+++ b/app/views/ppsps/show.pdf.erb
@@ -39,7 +39,7 @@
         </div>
       </div>
       </div>
-    <div class="pdf-text-container my-3">
+    <div class="pdf-text-container mt-3">
       <div class="pdf-title">
         Renseignements Administratifs
       </div>
@@ -57,11 +57,11 @@
           </div>
         </div>
       </div>
-      <div class="pdf-moe my-3">
+      <div class="pdf-moe mt-3">
         <div class="pdf-subtitle">
           Maître d'Oeuvre
         </div>
-        <div class="container-50 mb-2">
+        <div class="container-50">
           <div class="flexbox">
             <div class="flex-div-40">Nom : </div><div class="flex-div-60"><%= @ppsp.moe.name %></div>
             <div class="flex-div-40">Adresse : </div><div class="flex-div-60"><%= @ppsp.moe.address %></div>
@@ -111,7 +111,7 @@
               <div class="pdf-subsubtitle">
                 Chef de chantier
               </div>
-              <div class="container-80 mb-2">
+              <div class="container-80">
                 <div class="flexbox">
                     <div class="flex-div-40">Nom : </div><div class="flex-div-60"><%= @ppsp.project_information.site_manager.name %></div>
                     <div class="flex-div-40">Téléphone : </div><div class="flex-div-60"><%= @ppsp.project_information.site_manager.phone %></div>
@@ -125,7 +125,7 @@
               <div class="pdf-subsubtitle">
                 Chef d'équipe
               </div>
-              <div class="container-80 mb-2">
+              <div class="container-80">
                 <div class="flexbox">
                   <div class="flex-div-40">Nom :</div><div class="flex-div-60"><%= @ppsp.project_information.team_manager.name %></div>
                   <div class="flex-div-40">Téléphone :</div><div class="flex-div-60"><%= @ppsp.project_information.team_manager.phone %></div>
