Use turbolinks in react + path sign_in

--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container mb-3">
-  <%= link_to "Revenir à mes PPSP", ppsps_path, class: 'link', data: { turbolinks: false } %>
+  <%= link_to "Revenir à mes PPSP", ppsps_path, class: 'link' %>
   <div class="row justify-content-center">
     <%= simple_form_for @ppsp do |f| %>
       <div class="col-6 offset-3">
