--- a/app/views/ppsps/informations_supplementaires.html.erb
+++ b/app/views/ppsps/informations_supplementaires.html.erb
@@ -186,5 +186,5 @@
   </div>
   
 
-  <%= link_to "J'ai terminé !", ppsps_path, class: 'btn-blue', data: { turbolinks: false } %>
+  <%= link_to "J'ai terminé !", ppsps_path, class: 'btn-blue' %>
 </div>
