--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,9 @@
     <div class="col-6">
       <h1>Possibilité d'accéder à tous les documents créés par son entreprise avec un système de recherche rapide</h1>
     </div>
-  
+    <div class="col-6">
+      <%= video_tag('video-ppsp.mp4', size: "800x450", autoplay: true, loop: true, muted: 'muted') %>
+    </div>
   </div>
   <div class="row align-items-center">
     <div class="col-6">
