Modify button plus on form

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,4 +1,4 @@
-$btn-add-size: 25px;
+$btn-add-size: 18px;
 
 .btn-blue {
   padding: 8px 16px;
@@ -55,7 +55,9 @@ $btn-add-size: 25px;
   cursor: pointer;
   position: relative;
   border: 0.1px solid $orange;
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: $btn-add-size;
   height: $btn-add-size;
   margin-left: $btn-add-size/2;
@@ -76,7 +78,6 @@ $btn-add-size: 25px;
       position: relative;
       color: rgb(59, 59, 59);
       font-size: $btn-add-size/2;
-      margin-top: $btn-add-size/4;
       transition: all 0.25s ease;
     }
   }
