--- a/app/views/pages/database.html.erb
+++ b/app/views/pages/database.html.erb
@@ -20,6 +20,9 @@
     <%= link_to "Voir la liste des maitres d'oeuvres", moes_path, class: 'link' %>
     </div>
     <div class="link-db">
+    <%= link_to "Voir la liste des coordinateurs sécurité", security_coordinators_path, class: 'link' %>
+    </div>
+    <div class="link-db">
     <%= link_to "Voir la liste des caisses d'assurances retraite et de santé au travail", pension_insurances_path, class: 'link' %>
     </div>
     <div class="link-db">
