--- a/app/views/hospitals/_list_hospitals.html.erb
+++ b/app/views/hospitals/_list_hospitals.html.erb
@@ -4,7 +4,7 @@
       <%= link_to edit_hospital_path(hospital), class: "card-db-edit", target: '_blank' do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
-      <%= link_to "x", hospital_path(hospital), class: "card-db-delete", method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+      <%= link_to "x", destroy_hospital_path(hospital), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
     </div>
     <div class="db-element">
       <%= hospital.name %>
