--- a/app/views/moas/_list_moas.html.erb
+++ b/app/views/moas/_list_moas.html.erb
@@ -4,7 +4,7 @@
       <%= link_to edit_moa_path(moa), class: "card-db-edit", target: '_blank' do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
-      <%= link_to "x", moa_path(moa), class: "card-db-delete", method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+      <%= link_to "x", destroy_moa_path(moa), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
     </div>
     <div class="db-element">
       <%= moa.name %>
