--- a/app/views/moes/_list_moes.html.erb
+++ b/app/views/moes/_list_moes.html.erb
@@ -4,7 +4,7 @@
       <%= link_to edit_mo_path(moe), class: "card-db-edit", target: '_blank' do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
-      <%= link_to "x", mo_path(moe), class: "card-db-delete", method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+      <%= link_to "x", destroy_mo_path(moe), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
     </div>
     <div class="db-element">
       <%= moe.name %>
