--- a/app/views/security_coordinators/create.js.erb
+++ b/app/views/security_coordinators/create.js.erb
@@ -1,6 +1,11 @@
 $(document).ready(function() {
-  $(".modal-backdrop").hide()
-  $("#ModalSecurityCoordinator").hide()
-  $(".modal-open").css({overflow: 'scroll'})
-  $(".ppsp_security_coordinator_id")[0].innerHTML = "<%= j(render 'form_field_security_coordinator') %>";
+  $(".modal-backdrop").hide();
+  $("#ModalSecurityCoordinator").hide();
+  $(".modal-open").css({overflow: 'scroll'});
+  if (document.getElementById("ppsp_security_coordinator_id")) {
+    document.getElementById("ppsp_security_coordinator_id").innerHTML = "<%= j(render 'form_field_security_coordinator') %>";
+  }
+  if (document.querySelector(".container-database")) {
+    document.querySelector(".container-database").innerHTML = "<%= j(render 'list_security_coordinators') %>";
+  }
 })
