--- a/app/views/anti_poisons/index.html.erb
+++ b/app/views/anti_poisons/index.html.erb
@@ -16,23 +16,39 @@
     </div>
   <% end %>
   <div class="container-database">
-    <% @anti_poisons.each do |anti_poison| %>
-      <div class="card-database">
-        <div class="card-db-header">
-          <%= link_to edit_anti_poison_path(anti_poison), class: "card-db-edit", target: '_blank' do %>
-            <i class='fas fa-pencil-alt'></i>
-          <% end %>
-          <%= link_to "x", destroy_anti_poison_path(anti_poison), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-        </div>
-        <div class="db-element">
-          <%= anti_poison.name %>
-        </div>
-        <div class="db-element">
-          <%= anti_poison.address %>
-        </div>
-        <div class="db-element">
-          <%= anti_poison.phone %>
-        </div>
+    <%= form_with url: anti_poisons_path, class: "d-flex mt-2 justify-content-center", method: :get do |f| %>
+      <%= f.text_field :query, params: :query, class: "form-control search-db", placeholder: "Rechercher un mot-clé..." %>
+      <%= f.submit 'Go', class: "btn-orange-right" %>
+    <% end %>
+    <form class="d-flex justify-content-center mt-1" method="get" action=<%= anti_poisons_path %> data-remote="true">
+      <input type="hidden" name="query" value="">
+      <input class="btn-orange-ext" type="submit" value="Database complète">
+    </form>
+    <% if @anti_poisons.length > 0 %>
+      <div class="d-flex flex-wrap mt-2 justify-content-center">
+        <% @anti_poisons.each do |anti_poison| %>
+          <div class="card-database">
+            <div class="card-db-header">
+              <%= link_to edit_anti_poison_path(anti_poison), class: "card-db-edit", target: '_blank' do %>
+                <i class='fas fa-pencil-alt'></i>
+              <% end %>
+              <%= link_to "x", destroy_anti_poison_path(anti_poison), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+            </div>
+            <div class="db-element">
+              <%= anti_poison.name %>
+            </div>
+            <div class="db-element">
+              <%= anti_poison.address %>
+            </div>
+            <div class="db-element">
+              <%= anti_poison.phone %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    <% else %>
+      <div class="container-db-vide">
+        Votre recherche n'a retourné aucun résultat
       </div>
     <% end %>
   </div>
