--- a/app/views/moas/index.html.erb
+++ b/app/views/moas/index.html.erb
@@ -16,29 +16,45 @@
     </div>
   <% end %>
   <div class="container-database">
-    <% @moas.each do |moa| %>
-      <div class="card-database">
-        <div class="card-db-header">
-          <%= link_to edit_moa_path(moa), class: "card-db-edit", target: '_blank' do %>
-            <i class='fas fa-pencil-alt'></i>
-          <% end %>
-          <%= link_to "x", destroy_moa_path(moa), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-        </div>
-        <div class="db-element">
-          <%= moa.name %>
-        </div>
-        <div class="db-element">
-          <%= moa.address %>
-        </div>
-        <div class="db-element">
-          <%= moa.representative %>
-        </div>
-        <div class="db-element">
-          <%= moa.phone %>
-        </div>
-        <div class="db-element">
-          <%= moa.email %>
-        </div>
+    <%= form_with url: moas_path, class: "d-flex mt-2 justify-content-center", method: :get do |f| %>
+      <%= f.text_field :query, params: :query, class: "form-control search-db", placeholder: "Rechercher un mot-clé..." %>
+      <%= f.submit 'Go', class: "btn-orange-right" %>
+    <% end %>
+    <form class="d-flex justify-content-center mt-1" method="get" action=<%= moas_path %> data-remote="true">
+      <input class="btn-orange-ext" type="submit" value="Database complète">
+      <input type="hidden" name="query" value="">
+    </form>
+    <% if @moas.length > 0 %>
+      <div class="d-flex flex-wrap mt-2 justify-content-center">
+        <% @moas.each do |moa| %>
+          <div class="card-database">
+            <div class="card-db-header">
+              <%= link_to edit_moa_path(moa), class: "card-db-edit", target: '_blank' do %>
+                <i class='fas fa-pencil-alt'></i>
+              <% end %>
+              <%= link_to "x", destroy_moa_path(moa), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+            </div>
+            <div class="db-element">
+              <%= moa.name %>
+            </div>
+            <div class="db-element">
+              <%= moa.address %>
+            </div>
+            <div class="db-element">
+              <%= moa.representative %>
+            </div>
+            <div class="db-element">
+              <%= moa.phone %>
+            </div>
+            <div class="db-element">
+              <%= moa.email %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    <% else %>
+      <div class="container-db-vide">
+        Votre recherche n'a retourné aucun résultat
       </div>
     <% end %>
   </div>
