--- a/app/views/pension_insurances/index.html.erb
+++ b/app/views/pension_insurances/index.html.erb
@@ -16,23 +16,39 @@
     </div>
   <% end %>
   <div class="container-database">
-    <% @pension_insurances.each do |pension_insurance| %>
-      <div class="card-database">
-        <div class="card-db-header">
-          <%= link_to edit_pension_insurance_path(pension_insurance), class: "card-db-edit", target: '_blank' do %>
-            <i class='fas fa-pencil-alt'></i>
-          <% end %>
-          <%= link_to "x", destroy_pension_insurance_path(pension_insurance), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-        </div>
-        <div class="db-element">
-          <%= pension_insurance.address %>
-        </div>
-        <div class="db-element">
-          <%= pension_insurance.phone %>
-        </div>
-        <div class="db-element">
-          <%= pension_insurance.fax %>
-        </div>
+    <%= form_with url: pension_insurances_path, class: "d-flex mt-2 justify-content-center", method: :get do |f| %>
+      <%= f.text_field :query, params: :query, class: "form-control search-db", placeholder: "Rechercher un mot-clé..." %>
+      <%= f.submit 'Go', class: "btn-orange-right" %>
+    <% end %>
+    <form class="d-flex justify-content-center mt-1" method="get" action=<%= pension_insurances_path %> data-remote="true">
+      <input class="btn-orange-ext" type="submit" value="Database complète">
+      <input type="hidden" name="query" value="">
+    </form>
+    <% if @pension_insurances.length > 0 %>
+      <div class="d-flex flex-wrap mt-2 justify-content-center">
+        <% @pension_insurances.each do |pension_insurance| %>
+          <div class="card-database">
+            <div class="card-db-header">
+              <%= link_to edit_pension_insurance_path(pension_insurance), class: "card-db-edit", target: '_blank' do %>
+                <i class='fas fa-pencil-alt'></i>
+              <% end %>
+              <%= link_to "x", destroy_pension_insurance_path(pension_insurance), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+            </div>
+            <div class="db-element">
+              <%= pension_insurance.address %>
+            </div>
+            <div class="db-element">
+              <%= pension_insurance.phone %>
+            </div>
+            <div class="db-element">
+              <%= pension_insurance.fax %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    <% else %>
+      <div class="container-db-vide">
+        Votre recherche n'a retourné aucun résultat
       </div>
     <% end %>
   </div>
