--- a/app/views/security_coordinators/_list_security_coordinators.html.erb
+++ b/app/views/security_coordinators/_list_security_coordinators.html.erb
@@ -1,25 +1,41 @@
-<% @security_coordinators.each do |security_coordinator| %>
-  <div class="card-database">
-    <div class="card-db-header">
-      <%= link_to edit_security_coordinator_path(security_coordinator), class: "card-db-edit", target: '_blank' do %>
-        <i class='fas fa-pencil-alt'></i>
-      <% end %>
-      <%= link_to "x", destroy_security_coordinator_path(security_coordinator), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-    </div>
-    <div class="db-element">
-      <%= security_coordinator.name %>
-    </div>
-    <div class="db-element">
-      <%= security_coordinator.address %>
-    </div>
-    <div class="db-element">
-      <%= security_coordinator.representative %>
-    </div>
-    <div class="db-element">
-    <%= security_coordinator.phone %>
-    </div>
-    <div class="db-element">
-      <%= security_coordinator.email %>
-    </div>
+<%= form_with url: security_coordinators_path, class: "d-flex mt-2 justify-content-center", method: :get do |f| %>
+  <%= f.text_field :query, params: :query, class: "form-control search-db", placeholder: "Rechercher un mot-clé..." %>
+  <%= f.submit 'Go', class: "btn-orange-right" %>
+<% end %>
+<form class="d-flex justify-content-center mt-1" method="get" action=<%= security_coordinators_path %> data-remote="true">
+  <input class="btn-orange-ext" type="submit" value="Database complète">
+  <input type="hidden" name="query" value="">
+</form>
+<% if @security_coordinators.length > 0 %>
+  <div class="d-flex flex-wrap mt-2 justify-content-center">
+    <% @security_coordinators.each do |security_coordinator| %>
+      <div class="card-database">
+        <div class="card-db-header">
+          <%= link_to edit_security_coordinator_path(security_coordinator), class: "card-db-edit", target: '_blank' do %>
+            <i class='fas fa-pencil-alt'></i>
+          <% end %>
+          <%= link_to "x", destroy_security_coordinator_path(security_coordinator), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+        </div>
+        <div class="db-element">
+          <%= security_coordinator.name %>
+        </div>
+        <div class="db-element">
+          <%= security_coordinator.address %>
+        </div>
+        <div class="db-element">
+          <%= security_coordinator.representative %>
+        </div>
+        <div class="db-element">
+        <%= security_coordinator.phone %>
+        </div>
+        <div class="db-element">
+          <%= security_coordinator.email %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+<% else %>
+  <div class="container-db-vide">
+    Votre recherche n'a retourné aucun résultat
   </div>
 <% end %>
