--- a/app/views/work_medecines/_list_work_medecines.html.erb
+++ b/app/views/work_medecines/_list_work_medecines.html.erb
@@ -1,19 +1,35 @@
-<% @work_medecines.each do |work_medecine| %>
-  <div class="card-database">
-    <div class="card-db-header">
-      <%= link_to edit_work_medecine_path(work_medecine), class: "card-db-edit", target: '_blank' do %>
-        <i class='fas fa-pencil-alt'></i>
-      <% end %>
-      <%= link_to "x", destroy_work_medecine_path(work_medecine), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-    </div>
-    <div class="db-element">
-      <%= work_medecine.address %>
-    </div>
-    <div class="db-element">
-      <%= work_medecine.phone %>
-    </div>
-    <div class="db-element">
-      <%= work_medecine.fax %>
-    </div>
+<%= form_with url: work_medecines_path, class: "d-flex mt-2 justify-content-center", method: :get do |f| %>
+  <%= f.text_field :query, params: :query, class: "form-control search-db", placeholder: "Rechercher un mot-clé..." %>
+  <%= f.submit 'Go', class: "btn-orange-right" %>
+<% end %>
+<form class="d-flex justify-content-center mt-1" method="get" action=<%= work_medecines_path %> data-remote="true">
+  <input class="btn-orange-ext" type="submit" value="Database complète">
+  <input type="hidden" name="query" value="">
+</form>
+<% if @work_medecines.length > 0 %>
+  <div class="d-flex flex-wrap mt-2 justify-content-center">
+    <% @work_medecines.each do |work_medecine| %>
+      <div class="card-database">
+        <div class="card-db-header">
+          <%= link_to edit_work_medecine_path(work_medecine), class: "card-db-edit", target: '_blank' do %>
+            <i class='fas fa-pencil-alt'></i>
+          <% end %>
+          <%= link_to "x", destroy_work_medecine_path(work_medecine), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+        </div>
+        <div class="db-element">
+          <%= work_medecine.address %>
+        </div>
+        <div class="db-element">
+          <%= work_medecine.phone %>
+        </div>
+        <div class="db-element">
+          <%= work_medecine.fax %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+<% else %>
+  <div class="container-db-vide">
+    Votre recherche n'a retourné aucun résultat
   </div>
 <% end %>
