--- a/app/views/deminings/_list_deminings.html.erb
+++ b/app/views/deminings/_list_deminings.html.erb
@@ -6,29 +6,14 @@
   <input class="btn-orange-ext" type="submit" value="Database complète">
 </form>
 <% if @deminings.length > 0 %>
-  <div class="d-flex flex-wrap mt-2 justify-content-center">
-    <% @deminings.each do |demining| %>
-      <div class="card-database">
-        <div class="card-db-header">
-          <%= link_to edit_demining_path(demining), class: "card-db-edit", target: '_blank' do %>
-            <i class='fas fa-pencil-alt'></i>
-          <% end %>
-          <%= link_to "x", destroy_demining_path(demining), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-        </div>
-        <div class="db-element">
-          <%= demining.name %>
-        </div>
-        <div class="db-element">
-          <%= demining.address %>
-        </div>
-        <div class="db-element">
-          <%= demining.phone %>
-        </div>
-      </div>
-    <% end %>
+  <div class="flex-database d-flex flex-wrap mt-2 justify-content-center">
+    <%= render 'element', collection: @deminings_page %>
   </div>
 <% else %>
   <div class="container-db-vide">
     Votre recherche n'a retourné aucun résultat
   </div>
 <% end %>
+<div class="container-pagination" data-pagination-endpoint=<%= @endpoint %> data-pagination-pages=<%= @page_amount %>>
+  <%= image_tag('gif-loading.gif') %>
+</div>
