--- a/app/views/sos_hands/_list_sos_hands.html.erb
+++ b/app/views/sos_hands/_list_sos_hands.html.erb
@@ -6,29 +6,14 @@
   <input class="btn-orange-ext" type="submit" value="Database complète">
 </form>
 <% if @sos_hands.length > 0 %>
-  <div class="d-flex flex-wrap mt-2 justify-content-center">
-    <% @sos_hands.each do |sos_hand| %>
-      <div class="card-database">
-        <div class="card-db-header">
-          <%= link_to edit_sos_hand_path(sos_hand), class: "card-db-edit", target: '_blank' do %>
-            <i class='fas fa-pencil-alt'></i>
-          <% end %>
-          <%= link_to "x", destroy_sos_hand_path(sos_hand), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-        </div>
-        <div class="db-element">
-          <%= sos_hand.name %>
-        </div>
-        <div class="db-element">
-          <%= sos_hand.address %>
-        </div>
-        <div class="db-element">
-        <%= sos_hand.phone %>
-        </div>
-      </div>
-    <% end %>
+  <div class="flex-database d-flex flex-wrap mt-2 justify-content-center">
+    <%= render 'element', collection: @sos_hands_page %>
   </div>
 <% else %>
   <div class="container-db-vide">
     Votre recherche n'a retourné aucun résultat
   </div>
 <% end %>
+<div class="container-pagination" data-pagination-endpoint=<%= @endpoint %> data-pagination-pages=<%= @page_amount %>>
+  <%= image_tag('gif-loading.gif') %>
+</div>
