--- a/app/views/hospitals/_list_hospitals.html.erb
+++ b/app/views/hospitals/_list_hospitals.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: hospitals_path(hospital), class: "d-flex mt-2 justify-content-center", method: :get do |f| %>
+<%= form_with url: hospitals_path, class: "d-flex mt-2 justify-content-center", method: :get do |f| %>
     <%= f.text_field :query, params: :query, class: "form-control search-db", placeholder: "Rechercher un mot-clé..." %>
     <%= f.submit 'Go', class: "btn-orange-right" %>
 <% end %>
@@ -6,13 +6,14 @@
   <input class="btn-orange-ext" type="submit" value="Database complète">
 </form>
 <% if @hospitals.length > 0 %>
-  <div class="d-flex flex-wrap mt-2 justify-content-center">
-    <% @hospitals.each do |hospital| %>
-      <%= render 'element' %>
-    <% end %>
+  <div class="flex-database d-flex flex-wrap mt-2 justify-content-center">
+    <%= render 'element', collection: @hospitals_page %>
   </div>
 <% else %>
   <div class="container-db-vide">
     Votre recherche n'a retourné aucun résultat
   </div>
 <% end %>
+<div class="container-pagination" data-pagination-endpoint=<%= @endpoint %> data-pagination-pages=<%= @page_amount %>>
+  <%= image_tag('gif-loading.gif') %>
+</div>
