--- a/app/views/moas/index.html.erb
+++ b/app/views/moas/index.html.erb
@@ -24,37 +24,16 @@
       <input class="btn-orange-ext" type="submit" value="Database complète">
     </form>
     <% if @moas.length > 0 %>
-      <div class="d-flex flex-wrap mt-2 justify-content-center">
-        <% @moas.each do |moa| %>
-          <div class="card-database">
-            <div class="card-db-header">
-              <%= link_to edit_moa_path(moa), class: "card-db-edit", target: '_blank' do %>
-                <i class='fas fa-pencil-alt'></i>
-              <% end %>
-              <%= link_to "x", destroy_moa_path(moa), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-            </div>
-            <div class="db-element">
-              <%= moa.name %>
-            </div>
-            <div class="db-element">
-              <%= moa.address %>
-            </div>
-            <div class="db-element">
-              <%= moa.representative %>
-            </div>
-            <div class="db-element">
-              <%= moa.phone %>
-            </div>
-            <div class="db-element">
-              <%= moa.email %>
-            </div>
-          </div>
-        <% end %>
+      <div class="flex-database d-flex flex-wrap mt-2 justify-content-center">
+        <%= render 'element', collection: @moas_page %>
       </div>
     <% else %>
       <div class="container-db-vide">
         Votre recherche n'a retourné aucun résultat
       </div>
     <% end %>
+    <div class="container-pagination" data-pagination-endpoint=<%= @endpoint %> data-pagination-pages=<%= @page_amount %>>
+      <%= image_tag('gif-loading.gif') %>
+    </div>
   </div>
 </div>
