--- a/app/views/pension_insurances/_list_pension_insurances.html.erb
+++ b/app/views/pension_insurances/_list_pension_insurances.html.erb
@@ -6,29 +6,14 @@
   <input class="btn-orange-ext" type="submit" value="Database complète">
 </form>
 <% if @pension_insurances.length > 0 %>
-  <div class="d-flex flex-wrap mt-2 justify-content-center">
-    <% @pension_insurances.each do |pension_insurance| %>
-      <div class="card-database">
-        <div class="card-db-header">
-          <%= link_to edit_pension_insurance_path(pension_insurance), class: "card-db-edit", target: '_blank' do %>
-            <i class='fas fa-pencil-alt'></i>
-          <% end %>
-          <%= link_to "x", destroy_pension_insurance_path(pension_insurance), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-        </div>
-        <div class="db-element">
-          <%= pension_insurance.address %>
-        </div>
-        <div class="db-element">
-          <%= pension_insurance.phone %>
-        </div>
-        <div class="db-element">
-          <%= pension_insurance.fax %>
-        </div>
-      </div>
-    <% end %>
+  <div class="flex-database d-flex flex-wrap mt-2 justify-content-center">
+    <%= render 'element', collection: @pension_insurances_page %>
   </div>
 <% else %>
   <div class="container-db-vide">
     Votre recherche n'a retourné aucun résultat
   </div>
 <% end %>
+<div class="container-pagination" data-pagination-endpoint=<%= @endpoint %> data-pagination-pages=<%= @page_amount %>>
+  <%= image_tag('gif-loading.gif') %>
+</div>
