--- a/app/views/regional_committees/_list_regional_committees.html.erb
+++ b/app/views/regional_committees/_list_regional_committees.html.erb
@@ -1,37 +1,19 @@
-<%= form_with url: regional_committees_path, class: "d-flex mt-2 justify-content-center", method: :get do |f| %>
+<%= form_with url: pension_insurances_path, class: "d-flex mt-2 justify-content-center", method: :get do |f| %>
   <%= f.text_field :query, params: :query, class: "form-control search-db", placeholder: "Rechercher un mot-clé..." %>
   <%= f.submit 'Go', class: "btn-orange-right" %>
 <% end %>
-<form class="d-flex justify-content-center mt-1" method="get" action=<%= regional_committees_path %> data-remote="true">
+<form class="d-flex justify-content-center mt-1" method="get" action=<%= pension_insurances_path %> data-remote="true">
   <input class="btn-orange-ext" type="submit" value="Database complète">
 </form>
-<% if @regional_committees.length > 0 %>
-  <div class="d-flex flex-wrap mt-2 justify-content-center">
-    <% @regional_committees.each do |regional_committee| %>
-      <div class="card-database">
-        <div class="card-db-header">
-          <%= link_to edit_regional_committee_path(regional_committee), class: "card-db-edit", target: '_blank' do %>
-            <i class='fas fa-pencil-alt'></i>
-          <% end %>
-          <%= link_to "x", destroy_regional_committee_path(regional_committee), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-        </div>
-        <div class="db-element">
-          <%= regional_committee.name %>
-        </div>
-        <div class="db-element">
-          <%= regional_committee.address %>
-        </div>
-        <div class="db-element">
-          <%= regional_committee.phone %>
-        </div>
-        <div class="db-element">
-        <%= regional_committee.fax %>
-      </div>
-      </div>
-    <% end %>
+<% if @pension_insurances.length > 0 %>
+  <div class="flex-database d-flex flex-wrap mt-2 justify-content-center">
+    <%= render 'element', collection: @pension_insurances_page %>
   </div>
 <% else %>
   <div class="container-db-vide">
     Votre recherche n'a retourné aucun résultat
   </div>
 <% end %>
+<div class="container-pagination" data-pagination-endpoint=<%= @endpoint %> data-pagination-pages=<%= @page_amount %>>
+  <%= image_tag('gif-loading.gif') %>
+</div>
