--- a/app/views/regional_committees/index.html.erb
+++ b/app/views/regional_committees/index.html.erb
@@ -24,34 +24,16 @@
       <input class="btn-orange-ext" type="submit" value="Database complète">
     </form>
     <% if @regional_committees.length > 0 %>
-      <div class="d-flex flex-wrap mt-2 justify-content-center">
-        <% @regional_committees.each do |regional_committee| %>
-          <div class="card-database">
-            <div class="card-db-header">
-              <%= link_to edit_regional_committee_path(regional_committee), class: "card-db-edit", target: '_blank' do %>
-                <i class='fas fa-pencil-alt'></i>
-              <% end %>
-              <%= link_to "x", destroy_regional_committee_path(regional_committee), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-            </div>
-            <div class="db-element">
-              <%= regional_committee.name %>
-            </div>
-            <div class="db-element">
-              <%= regional_committee.address %>
-            </div>
-            <div class="db-element">
-              <%= regional_committee.phone %>
-            </div>
-            <div class="db-element">
-            <%= regional_committee.fax %>
-          </div>
-          </div>
-        <% end %>
+      <div class="flex-database d-flex flex-wrap mt-2 justify-content-center">
+        <%= render 'element', collection: @regional_committees_page %>
       </div>
     <% else %>
       <div class="container-db-vide">
         Votre recherche n'a retourné aucun résultat
       </div>
     <% end %>
+    <div class="container-pagination" data-pagination-endpoint=<%= @endpoint %> data-pagination-pages=<%= @page_amount %>>
+      <%= image_tag('gif-loading.gif') %>
+    </div>
   </div>
 </div>
